Apply and list pages were added

--- a/Views/Meeting/Index.cshtml
+++ b/Views/Meeting/Index.cshtml
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toplantı Odası</title>
+    <title>Meeting Room</title>
 </head>
 <body>
-    <h1>Toplantı Odası</h1>
-    <p>Toplantıya sizinle birlikte 20 kişi katılıyor</p>
-    <a href="#">Katılımcıları görüntüle</a>
+    <h1>Meeting Room</h1>
+    <p>There are 20 participant with you</p>
+    <a href="#">List all participant</a>
 </body>
 </html>
