_Layout, _ViewImports, _ViewStart

--- a/Views/Meeting/Apply.cshtml
+++ b/Views/Meeting/Apply.cshtml
@@ -1,4 +1,4 @@
-<h1>Meeting Participation Form</h1>
+<h1 class="h4">Meeting Participation Form</h1>
 <form action="">
-    <Button type ="submit">Submit</Button>
+    <Button class="btn btn-primary" type ="submit">Submit</Button>
 </form>
