--- a/Views/Meeting/List.cshtml
+++ b/Views/Meeting/List.cshtml
@@ -1,32 +1,28 @@
-<h1>Meeting Participation List</h1>
+<h1 class="h4">Meeting Participation List</h1>
 
-<table>
+<table class="table table-bordered">
     <thead>
         <tr>
-            <td>Name</td>
-            <td>Email</td>
-            <td>Participation Status</td>
-            <td>Details</td>
+            <th scope="col">Name</th>
+            <th scope="col">Participation Status</th>
+            <th scope="col">Details</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>Fatih</td>
-            <td>fatih@altunel.com</td>
             <td>Participating</td>
-            <td><a href="#">Details</a></td>
+            <td><a href="#" class="btn btn-sm btn-primary">Details</a></td>
         </tr>
         <tr>
             <td>Ebru</td>
-            <td>ebruh@isik.com</td>
             <td>Participating</td>
-            <td><a href="#">Details</a></td>
+            <td><a href="#" class="btn btn-sm btn-primary">Details</a></td>
         </tr>
         <tr>
             <td>Fevzi</td>
-            <td>fevzi@yilmaz.com</td>
             <td>Not Participating</td>
-            <td><a href="#">Details</a></td>
+            <td><a href="#" class="btn btn-sm btn-primary">Details</a></td>
         </tr>
     </tbody>
 </table>
