--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Başvuru Yap!!</title>
-</head>
-<body>
-    <h1>Merhaba</h1>
-    <p>Toplantıya katılmak için başvuru yap</p>
-    <a href="#">Başvuru yap!</a>
-</body>
-</html>
+<h1>Hello</h1>
+<p>Please submit the form in order to participate the meeting</p>
+<a asp-controller="Meeting" asp-action="Apply" class="btn btn-sm btn-outline-primary">Submit The Form</a>
