--- a/Views/Meeting/Index.cshtml
+++ b/Views/Meeting/Index.cshtml
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeting Room</title>
-</head>
-<body>
-    <h1>Meeting Room</h1>
-    <p>There are 20 participant with you</p>
-    <a href="#">List all participant</a>
-</body>
-</html>
+<h1 class="h4">Meeting Room</h1>
+<p>There are 20 participant with you</p>
+<a asp-controller="Meeting" asp-action="List" class="btn btn-sm btn-outline-primary">List all participant</a>
