Participation form designed

--- a/Views/Meeting/List.cshtml
+++ b/Views/Meeting/List.cshtml
@@ -1,6 +1,10 @@
-<h1 class="h4">Meeting Participation List</h1>
-
-<table class="table table-bordered">
+@{
+    ViewBag.Title="Meeting Participation List";
+}
+<main class="text-center">
+    <h1 class="h4">Meeting Participation List</h1>
+    
+    <table class="table table-bordered">
     <thead>
         <tr>
             <th scope="col">Name</th>
@@ -26,3 +30,4 @@
         </tr>
     </tbody>
 </table>
+</main>
