--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,17 @@
+@model MeetingInfo
+
+@{
+    ViewBag.Title="Meetin Application";
+}
+<main class="text-center">
 <h1>Hello</h1>
 <p>Please submit the form in order to participate the meeting</p>
+<div class="card my-2">
+    <ul class="list-group list-group-flash">
+        <li class="list-group-item">@Model.Location</li>
+        <li class="list-group-item">@Model.Date.ToString("dd/MM/yyyy HH:mm")</li>
+        <li class="list-group-item">@Model.NumberOfPeople</li>
+    </ul>
+</div>
 <a asp-controller="Meeting" asp-action="Apply" class="btn btn-sm btn-outline-primary">Submit The Form</a>
+</main>
