--- a/Views/Meeting/Apply.cshtml
+++ b/Views/Meeting/Apply.cshtml
@@ -1,4 +1,27 @@
-<h1 class="h4">Meeting Participation Form</h1>
+@{
+    ViewBag.Title="Meeting Participation Form";
+}
+
+<h1 class="h4 text-center">Meeting Participation Form</h1>
 <form action="">
-    <Button class="btn btn-primary" type ="submit">Submit</Button>
+    <div class="mb-3">
+        <label for="Name" class="form-label">Name</label>
+        <input type="text" name="Name" id="Name" class="form-control"></input>
+    </div>
+    <div class="mb-3">
+        <label for="Phone" class="form-label">Phone Number</label>
+        <input type="text" name="Phone" id="Phone" class="form-control"></input>
+    </div>
+    <div class="mb-3">
+        <label for="Email" class="form-label">Email</label>
+        <input type="email" name="Email" id="Email" class="form-control"></input>
+    </div>
+    <div class="mb-3">
+        <label for="ParticipateStatus" class="form-label">Will You Participate</label>
+        <select name="ParticipateStatus" id="ParticipateStatus" class="form-select">
+            <option value="true">Yes, I Will</option>
+            <option value="false">No, I Won't</option>
+        </select>
+    </div>
 </form>
+<Button class="btn btn-primary" type ="submit">Submit</Button>
