--- a/Views/Meeting/Index.cshtml
+++ b/Views/Meeting/Index.cshtml
@@ -1,3 +1,8 @@
-<h1 class="h4">Meeting Room</h1>
-<p>There are 20 participant with you</p>
-<a asp-controller="Meeting" asp-action="List" class="btn btn-sm btn-outline-primary">List all participant</a>
+@{
+    ViewBag.Title="Meeting Room";
+}
+<main class="text-center">
+    <h1 class="h4">Meeting Room</h1>
+    <p>There are 20 participant with you</p>
+    <a asp-controller="Meeting" asp-action="List" class="btn btn-sm btn-outline-primary">List all participant</a>
+</main>
