--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <ul class="list-group list-group-flash">
         <li class="list-group-item">@Model.Location</li>
         <li class="list-group-item">@Model.Date.ToString("dd/MM/yyyy HH:mm")</li>
-        <li class="list-group-item">@Model.NumberOfPeople</li>
+        <li class="list-group-item">@Model.NumberOfPeople Participants</li>
     </ul>
 </div>
 <a asp-controller="Meeting" asp-action="Apply" class="btn btn-sm btn-outline-primary">Submit The Form</a>
