--- a/Views/Meeting/List.cshtml
+++ b/Views/Meeting/List.cshtml
@@ -1,3 +1,4 @@
+@model List<UserInfo>
 @{
     ViewBag.Title="Meeting Participation List";
 }
@@ -13,21 +14,25 @@
         </tr>
     </thead>
     <tbody>
+        @{int i=0;}
+        @foreach(var user in Model){
         <tr>
-            <td>Fatih</td>
-            <td>Participating</td>
+            <td>@user.Name</td>
+            @if(@user.ParticipateStatus==true){
+            <td class="table-success">Participating</td>
+            i++;
+            }else{
+            <td class="table-danger">Not Participating</td>
+            }
             <td><a href="#" class="btn btn-sm btn-primary">Details</a></td>
         </tr>
-        <tr>
-            <td>Ebru</td>
-            <td>Participating</td>
-            <td><a href="#" class="btn btn-sm btn-primary">Details</a></td>
-        </tr>
-        <tr>
-            <td>Fevzi</td>
-            <td>Not Participating</td>
-            <td><a href="#" class="btn btn-sm btn-primary">Details</a></td>
-        </tr>
+        }
     </tbody>
 </table>
+    <div class="card">
+        <div class=card-body>
+            <span>Total Participants: @i</span>
+            <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Go Home</a>
+        </div>
+    </div>
 </main>
