Details screen added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,4 +14,5 @@
     </ul>
 </div>
 <a asp-controller="Meeting" asp-action="Apply" class="btn btn-sm btn-outline-primary">Submit The Form</a>
+<a asp-controller="Meeting" asp-action="List" class="btn btn-sm btn-outline-primary">List The Participants</a>
 </main>
