--- a/Views/Meeting/Details.cshtml
+++ b/Views/Meeting/Details.cshtml
@@ -3,9 +3,21 @@
     ViewBag.Title= "Participant Details";
 }
 
+@{
+    var className= @Model.ParticipateStatus == true ? "primary" : "danger";
+}
+
 <main class="text-center">
     <h1 class="h4">@Model.Name details</h1>
+    <span class="badge text-bg-@className">
+        @if(@Model.ParticipateStatus==true){
+            <text>Participating</text>
+        }else{
+            <text>Not Participating</text>
+        }
+    </span>
     <p>Name: @Model.Name</p>
     <p>Email: @Model.Email</p>
     <p>Phone: @Model.Phone</p>
+    <a asp-controller="Meeting" asp-action="List" class="btn btn-sm btn-outline-@className">List The Participants</a>
 </main>
